# fortunate

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  sample_sqlite.db
app/: Dockerfile  index.html  package-lock.json  package.json
app/src/: index.css  main.tsx  theme.tsx
app/src/components/: AddModal.tsx  App.tsx  Content.tsx  Controls.tsx  Epigram.tsx  EpigramWidget.tsx  Footer.tsx  Header.tsx  Layout.tsx
fortunate/: Dockerfile  main.py  models.py  populate.py
