[tool.poetry]
name = "fortunate"
version = "0.1.0"
description = "Epigram service"
authors = ["Damien Allen <dev@dallen.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
sqlmodel = "^0.0.19"
httpx = "^0.27.0"
tqdm = "^4.66.4"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
